--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,11 @@ RewriteRule ^(.*)$ $1.html [L]
 # Custom error pages
 ErrorDocument 404 /404.html
 
+# Enable Server-Side Includes (SSI) for navbar reuse
+Options +Includes
+AddType text/html .html
+AddOutputFilter INCLUDES .html
+
 # Enable browser caching for static assets
 <IfModule mod_expires.c>
     ExpiresActive On
@@ -16,5 +21,5 @@ ErrorDocument 404 /404.html
     ExpiresByType image/jpeg "access plus 1 month"
     ExpiresByType image/png "access plus 1 month"
     ExpiresByType text/css "access plus 1 month"
-    ExpiresByType application/javascript "access plus 1 month"
+    ExpiresByType application/javascript "plus 1 month"
 </IfModule>
